RESOLVED FIXED168063
Fix some logging statements in MediaPlayerPrivateMediaStreamAVFObjC
https://bugs.webkit.org/show_bug.cgi?id=168063
Summary Fix some logging statements in MediaPlayerPrivateMediaStreamAVFObjC
Jer Noble
Reported 2017-02-09 11:42:38 PST
Fix some logging statements in MediaPlayerPrivateMediaStreamAVFObjC
Attachments
Patch (2.30 KB, patch)
2017-02-09 11:43 PST, Jer Noble
no flags
Jer Noble
Comment 1 2017-02-09 11:43:44 PST
WebKit Commit Bot
Comment 2 2017-02-09 12:24:04 PST
Comment on attachment 301064 [details] Patch Clearing flags on attachment: 301064 Committed r211977: <http://trac.webkit.org/changeset/211977>
WebKit Commit Bot
Comment 3 2017-02-09 12:24:08 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.