Fix some logging statements in MediaPlayerPrivateMediaStreamAVFObjC https://bugs.webkit.org/show_bug.cgi?id=168063

Reviewed by Eric Carlson.

Make the format string match the types passed in (i.e., floats, not strings).

* platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaStreamAVFObjC.mm:
(WebCore::MediaPlayerPrivateMediaStreamAVFObjC::updateSampleTimes):


Canonical link: https://commits.webkit.org/185091@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@211977 268f45cc-cd09-0410-ab3c-d52691b4dbfc